--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,16 @@ nav ul li a:hover {
     color: #555555;
 }
 
+@media only screen and (max-width: 480px) {
+    body {
+        font-size: 14px;
+    }
+
+    h1 {
+        font-size: 20px;
+    }
+}
+
 /* Footer */
 footer {
     background-color: #003366;
